[package]
name = "core_app_web"
version = "0.1.0"
edition = "2021"
authors = ["Ante Perišić <perisic.ante@gmail.com>"]

[dependencies]
chrono = "0.4.40"
serde = {version="1.0.218", features=["derive"]}
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "json"] }
tokio = {version = "1.43.0", features=["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
